Tests/a1/reject/32.ul
int main (int x) {
	if (x ==3) {
	
	}

int main () {
	x;
}